# cmake_tutorial

./: .gitignore  removeSH.cmd  removeSH.sh
cmake_cgold/: CMakeLists.txt  foo.cpp
cmake_cgold/3_5_Project_Declaration/c-compiler/: CMakeLists.txt  foo.cpp
cmake_cgold/3_5_Project_Declaration/hierarchy/: CMakeLists.txt
cmake_cgold/3_5_Project_Declaration/hierarchy/boo/: CMakeLists.txt
cmake_cgold/3_5_Project_Declaration/toolchain/: toolchain.cmake
cmake_cgold/3_5_Project_Declaration/variables/: CMakeLists.txt
cmake_gtest/: function.cpp  function.h  function_test.cpp
cmake_tutorial/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
cmake_tutorial/MathFunctions/: CMakeLists.txt  MySqrt.cxx
sample/: CMakeLists.txt  main.cpp
sample2/: CMakeLists.txt  main.cpp
